# cstringx

./: CMakeLists.txt  cstringx.c  cstringx.h
inc/: cstringx.h
src/: cstringx.c
